Here's the commented version of the code:

```c++
# Copyright 2020 The gRPC Authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.
"""Tests the behaviour of the Call classes under a secure channel."""

import logging
import unittest

import grpc
from grpc.experimental import aio

from src.proto.grpc.testing import messages_pb2
from src.proto.grpc.testing import test_pb2_grpc
from tests.unit import resources
from tests_aio.unit._test_base import AioTestBase
from tests_aio.unit._test_server import start_test_server

# Constants for test configuration
_SERVER_HOST_OVERRIDE = "foo.test.google.fr"  # Override for SSL hostname verification
_NUM_STREAM_RESPONSES = 5                     # Number of responses for streaming tests
_RESPONSE_PAYLOAD_SIZE = 42                   # Size of response payload in bytes

class _SecureCallMixin:
    """A Mixin to run the call tests over a secure channel.
    
    Provides setup and teardown methods to create a secure gRPC channel and server
    for testing purposes.
    """

    async def setUp(self):
        """Set up a secure test environment before each test case.
        
        Creates:
        - Server with SSL credentials
        - Secure channel with SSL credentials and host override
        - Test service stub for making RPC calls
        """
        # Create server SSL credentials using test resources
        server_credentials = grpc.ssl_server_credentials(
            [(resources.private_key(), resources.certificate_chain())]
        )
        # Create channel SSL credentials using test root certificates
        channel_credentials = grpc.ssl_channel_credentials(
            resources.test_root_certificates()
        )

        # Start secure test server and get its address
        self._server_address, self._server = await start_test_server(
            secure=True, server_credentials=server_credentials
        )
        
        # Channel options including SSL hostname override
        channel_options = (
            (
                "grpc.ssl_target_name_override",
                _SERVER_HOST_OVERRIDE,
            ),
        )
        
        # Create secure channel with credentials and options
        self._channel = aio.secure_channel(
            self._server_address, channel_credentials, channel_options
        )
        # Create stub for TestService
        self._stub = test_pb2_grpc.TestServiceStub(self._channel)

    async def tearDown(self):
        """Clean up after each test case.
        
        Closes the channel and stops the server.
        """
        await self._channel.close()
        await self._server.stop(None)

class TestUnaryUnarySecureCall(_SecureCallMixin, AioTestBase):
    """Test cases for unary_unary calls made over a secure channel."""

    async def test_call_ok_over_secure_channel(self):
        """Test successful unary call over secure channel."""
        # Make unary RPC call
        call = self._stub.UnaryCall(messages_pb2.SimpleRequest())
        response = await call
        
        # Verify response is correct type and status is OK
        self.assertIsInstance(response, messages_pb2.SimpleResponse)
        self.assertEqual(await call.code(), grpc.StatusCode.OK)

    async def test_call_with_credentials(self):
        """Test unary call with additional call credentials."""
        # Create composite call credentials
        call_credentials = grpc.composite_call_credentials(
            grpc.access_token_call_credentials("abc"),
            grpc.access_token_call_credentials("def"),
        )
        # Make unary RPC call with credentials
        call = self._stub.UnaryCall(
            messages_pb2.SimpleRequest(), credentials=call_credentials
        )
        response = await call

        # Verify response is correct type
        self.assertIsInstance(response, messages_pb2.SimpleResponse)

class TestUnaryStreamSecureCall(_SecureCallMixin, AioTestBase):
    """Test cases for unary_stream calls over a secure channel."""

    async def test_unary_stream_async_generator_secure(self):
        """Test unary-stream call with async generator and credentials."""
        # Prepare streaming request with multiple response parameters
        request = messages_pb2.StreamingOutputCallRequest()
        request.response_parameters.extend(
            messages_pb2.ResponseParameters(
                size=_RESPONSE_PAYLOAD_SIZE,
            )
            for _ in range(_NUM_STREAM_RESPONSES)
        )
        
        # Create composite call credentials
        call_credentials = grpc.composite_call_credentials(
            grpc.access_token_call_credentials("abc"),
            grpc.access_token_call_credentials("def"),
        )
        
        # Make streaming call
        call = self._stub.StreamingOutputCall(
            request, credentials=call_credentials
        )

        # Verify each response in the stream
        async for response in call:
            self.assertIsInstance(
                response, messages_pb2.StreamingOutputCallResponse
            )
            self.assertEqual(len(response.payload.body), _RESPONSE_PAYLOAD_SIZE)

        # Verify final status is OK
        self.assertEqual(await call.code(), grpc.StatusCode.OK)

# Predefined request for streaming tests with single response
_STREAM_OUTPUT_REQUEST_ONE_RESPONSE = messages_pb2.StreamingOutputCallRequest()
_STREAM_OUTPUT_REQUEST_ONE_RESPONSE.response_parameters.append(
    messages_pb2.ResponseParameters(size=_RESPONSE_PAYLOAD_SIZE)
)

class TestStreamStreamSecureCall(_SecureCallMixin, AioTestBase):
    """Test cases for stream_stream calls over a secure channel."""
    
    _STREAM_ITERATIONS = 2  # Number of messages to send in streaming test

    async def test_async_generator_secure_channel(self):
        """Test bidirectional streaming with async generator and credentials."""
        
        # Request generator that yields multiple requests
        async def request_generator():
            for _ in range(self._STREAM_ITERATIONS):
                yield _STREAM_OUTPUT_REQUEST_ONE_RESPONSE

        # Create composite call credentials
        call_credentials = grpc.composite_call_credentials(
            grpc.access_token_call_credentials("abc"),
            grpc.access_token_call_credentials("def"),
        )

        # Make bidirectional streaming call
        call = self._stub.FullDuplexCall(
            request_generator(), credentials=call_credentials
        )
        
        # Verify each response in the stream
        async for response in call:
            self.assertEqual(_RESPONSE_PAYLOAD_SIZE, len(response.payload.body))

        # Verify final status is OK
        self.assertEqual(await call.code(), grpc.StatusCode.OK)

if __name__ == "__main__":
    # Configure logging and run tests
    logging.basicConfig(level=logging.DEBUG)
    unittest.main(verbosity=2)
```

The comments added:
1. Documented all class-level purposes and mixin functionality
2. Explained each test case's purpose
3. Added comments for key operations and verifications
4. Documented constants and their usage
5. Explained the setup and teardown processes
6. Added comments for the main execution block
7. Clarified the purpose of helper functions and generators

The comments maintain a consistent style and provide clear explanations without being overly verbose. They focus on the "why" rather than just the "what" of the code.